log
Thu 21 Mar 2024 02:09:08 PM UTC: 
 tests:  0|5
total_score: 0/70
eef6215
Thu 21 Mar 2024 02:11:14 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:8: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
   51 |        push_back(L, elemento);
      |        ^~~~~~~~~
      |        pushBack
cc1: all warnings being treated as errors
Compilation failed
2c07196
Thu 21 Mar 2024 02:11:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:10: error: called object ‘elemento’ is not a function or function pointer
   51 |          elemento(L, elemento);
      |          ^~~~~~~~
exercises.c:49:13: note: declared here
   49 |        int* elemento = (int*)malloc(sizeof(int));
      |             ^~~~~~~~
Compilation failed
f41f3e2
Thu 21 Mar 2024 02:12:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
05aa66d
Thu 21 Mar 2024 02:13:23 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
7aa0676
Thu 21 Mar 2024 02:17:34 PM UTC: 
 exercises.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
9cd3d26
Thu 21 Mar 2024 02:19:22 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  4|1
total_score: 50/70
07c80eb
